--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!doctype html>
-<html>
+<html lang="zh-CN">
+
 <head>
     <title>Hello world</title>
+    <meta charset="utf-8" />
+    <meta name="author" content="EarthMessenger" />
+    <meta name="description" content="EarthMessenger.github.io 是 EarthMessenger 的个人网站，包括一些杂七杂八的网页项目" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 </head>
+
 <body>
-    <h1>Hello world!</title>
+    <h1>Hello World!</h1>
+    <p>This is my website with Github Pages!</p>
+    <p>This is a markdown test: <a herf="./_post/Hello-World.md" title="Click to see the markdown">Click here!</a></p>
 </body>
+
 </html>
