--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <body>
     <h1>Hello World!</h1>
     <p>This is my website with Github Pages!</p>
-    <p>This is a markdown test: <a href="_post/Hello-World_md">Click here!</a></p>
-    <p>This is a html test: <a href="_post/Hello-World_html">Click here!</a></p>
+    <p>This is a markdown test: <a href="blogs/Hello-World_md/">Click here!</a></p>
+    <p>This is a html test: <a href="blogs/Hello-World_html/">Click here!</a></p>
+    <p>This is a markdown test: <a href="blogs/Hello-World.md">Click here!</a></p>
+    <p>This is a html test: <a href="blogs/Hello-World.html">Click here!</a></p>
 </body>
 
 </html>
