make a new homepage(in dev)

--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
     <meta name="author" content="EarthMessenger" />
     <meta name="description" content="EarthMessenger.github.io 是 EarthMessenger 的个人网站，包括一些杂七杂八的网页项目" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <link href="./style/mainstyle.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-    <h1>Hello World!</h1>
+    <!--   <h1>Hello World!</h1>
     <p>This is my website with Github Pages!</p>
     <p>This is a markdown test: <a href="blogs/Hello-World_md/">Click here!</a></p>
     <p>This is a html test: <a href="blogs/Hello-World_html/">Click here!</a></p>
     <p>This is a markdown test: <a href="blogs/Hello-World.md">Click here!</a></p>
-    <p>This is a html test: <a href="blogs/Hello-World.html">Click here!</a></p>
+    <p>This is a html test: <a href="blogs/Hello-World.html">Click here!</a></p>-->
+    <div id="title" class="fullscreen bingbg">
+        <div id="mask" class="blackmask fullscreen"> </div>
+        <div id="title_text" class="fullscreen headtext">Hello World</div>
+
+    </div>
 </body>
 
 </html>
-
