update a lot for mainpage

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     <p>This is a html test: <a href="blogs/Hello-World_html/">Click here!</a></p>
     <p>This is a markdown test: <a href="blogs/Hello-World.md">Click here!</a></p>
     <p>This is a html test: <a href="blogs/Hello-World.html">Click here!</a></p>-->
-    <div id="title" class="fullscreen bingbg">
-        <div id="mask" class="blackmask fullscreen"> </div>
-        <div id="title_text" class="fullscreen headtext">Hello World</div>
-
+    <div id="root" class="fullscreen dark">
+        <div id="background" class="fullscreen bingbg"></div>
+        <div id="title">
+            <div id="title_text" class="title_text">Hello World!</div>
+            <div id="sub_title_test" class="sub_title_text">恭喜您发现一个空空如也的个人网站</div>
+        </div>
     </div>
 </body>
 
