加上了一个没有什么用的脚注
添加时间显示并且标注图片来源。
以后提交尽量写中文

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <meta name="description" content="EarthMessenger.github.io 是 EarthMessenger 的个人网站，包括一些杂七杂八的网页项目" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <link href="./style/mainstyle.css" rel="stylesheet" type="text/css" />
+    <script>
+        function showTime() {
+            nowtime = new Date();
+            year = nowtime.getFullYear();
+            month = nowtime.getMonth() + 1;
+            date = nowtime.getDate();
+            document.getElementById("time").innerText = year + "年" + month + "月" + date + "日 " + nowtime.toLocaleTimeString();
+        }
+
+        setInterval("showTime()", 1000);
+    </script>
 </head>
 
 <body>
@@ -17,6 +28,10 @@
             <div id="title_text" class="title_text">Hello World!</div>
             <div id="sub_title_test" class="sub_title_text">恭喜您发现一个空空如也的个人网站</div>
         </div>
+        <footer>
+            <div id="time" style="float: left;">加载中……</div>
+            <div id="image_info" style="float: right;">图片来自 Bing 每日图片</div>
+        </footer>
     </div>
 </body>
 
