更新了一大堆！
标题增加动画
附上了图片出处及 api 的链接
添加指向博客的链接（在主页）

--- a/index.html
+++ b/index.html
@@ -19,8 +19,48 @@
         <div id="background" class="fullscreen bingbg"></div>
 
         <div id="title">
-            <div id="title_text" class="title_text">Hello World!</div>
-            <div id="sub_title_test" class="sub_title_text">恭喜您发现一个空空如也的个人网站</div>
+            <div id="title_text" class="title_text"></div>
+            <div id="sub_title_text" class="sub_title_text"></div>
+        </div>
+
+        <!--输入特效-->
+        <script>
+            let title = "Hello World", sub_title = "恭喜您发现一个人网站";
+            var title_obj = document.getElementById("title_text"), sub_title_obj = document.getElementById("sub_title_text");
+            var i = 0, j = 0, timer;
+            function typing() {
+                if (i <= title.length) {
+                    title_obj.innerHTML = title.slice(0, i++) + '_';
+                } else {
+                    title_obj.innerHTML = title;
+                }
+                if (j <= sub_title.length) {
+                    sub_title_obj.innerHTML = sub_title.slice(0, j++) + '_';
+                } else {
+                    sub_title_obj.innerHTML = sub_title;
+                }
+                if (i > title.length && j > sub_title.length) {
+                    title_obj.innerHTML = title;
+                    sub_title_obj.innerHTML = sub_title;
+                    clearTimeout(timer);
+                } else {
+                    timer = setTimeout("typing()", 200);
+                }
+            }
+            typing();
+        </script>
+        <!--输入特效-->
+
+        <div id="nav">
+            <ul id="nav_list" class="nav_list">
+                <li id="nav_to_blog" class="list_object" style="margin: 0px auto;">
+                    <a href="blogs">
+                        <span id="blog_icon" class="list_icon">📃</span>
+                        <br />
+                        <span id="blog_text" class="list_text">我的博客</span>
+                    </a>
+                </li>
+            </ul>
         </div>
 
         <footer>
@@ -31,7 +71,8 @@
                     次</span>
             </div>
             <!--不算子计数-->
-            <div id="image_info" style="float: right;">图片来自 Bing 每日图片</div>
+            <div id="image_info" style="float: right;">图片来自 <a href="https://bing.com/">Bing</a> 每日图片 / api 来自 <a
+                    href="https://www.dujin.org/3618.html">缙哥哥博客</a></div>
         </footer>
 
     </div>
