--- a/index.html
+++ b/index.html
@@ -67,12 +67,14 @@
 
         <div id="nav">
             <ul id="nav_list" class="nav_list">
-                <li id="nav_to_blog" class="list_object" style="margin: 0px auto;">
-                    <a href="blogs">
-                        <span id="blog_icon" class="list_icon">📃</span>
-                        <br />
-                        <span id="blog_text" class="list_text">我的博客</span>
-                    </a>
+                <li id="nav_to_blog" class="list_object">
+                    <div class="nav_object_border">
+                        <a href="blogs">
+                            <span id="blog_icon" class="list_icon">📃</span>
+                            <br />
+                            <span id="blog_text" class="list_text">我的博客</span>
+                        </a>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -85,8 +87,8 @@
                     次</span>
             </div>
             <!--不算子计数-->
-            <div id="image_info" style="float: right;">图片来自 <a href="https://bing.com/">Bing</a> 每日图片 / api 来自 <a
-                    href="https://www.dujin.org/3618.html">缙哥哥博客</a></div>
+            <div id="image_info" style="float: right;">图片来自 <a href="/goto?goto=https://bing.com/">Bing</a> 每日图片 / api 来自 <a
+                    href="/goto?goto=https://www.dujin.org/3618.html">缙哥哥博客</a></div>
         </footer>
 
     </div>
