尝试优化阅读
添加了md测试文件
简单的优化了阅读视图（需要进一步开发，未来打算加入自定义功能）

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="EarthMessenger" />
     <meta name="description" content="EarthMessenger.github.io 是 EarthMessenger 的个人网站，包括一些杂七杂八的网页项目" />
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
-    <link href="./assets/style/mainstyle.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/style/homepage.css" rel="stylesheet" type="text/css" />
     <!--不算子计数js-->
     <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
     <!--不算子计数js-->
