优化博客阅读视图
增加计数器（ui待调试）

--- a/index.html
+++ b/index.html
@@ -81,11 +81,12 @@
 
         <footer>
             <!--不算子计数-->
-            <div id="website_cnt" style="float: left;">
+            <div id="blog_cnt" style="float: left;">
                 <span id="busuanzi_container_site_pv">本站已经被巨佬们访问了
                     <span id="busuanzi_value_site_pv">0</span>
                     次</span>
             </div>
+            <div id=""
             <!--不算子计数-->
             <div id="image_info" style="float: right;">图片来自 <a href="/goto?goto=https://bing.com/">Bing</a> 每日图片 / api 来自 <a
                     href="/goto?goto=https://www.dujin.org/3618.html">缙哥哥博客</a></div>
