尝试优化阅读视图

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="author" content="EarthMessenger" />
     <meta name="description" content="EarthMessenger.github.io 是 EarthMessenger 的个人网站，包括一些杂七杂八的网页项目" />
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
     <link href="/assets/style/homepage.css" rel="stylesheet" type="text/css" />
     <!--不算子计数js-->
     <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
@@ -67,15 +67,15 @@
 
         <div id="nav">
             <ul id="nav_list" class="nav_list">
-                <li id="nav_to_blog" class="list_object">
-                    <div class="nav_object_border">
-                        <a href="blogs">
+                <a href="blogs">
+                    <li id="nav_to_blog" class="list_object">
+                        <div class="nav_object_border">
                             <span id="blog_icon" class="list_icon">📃</span>
                             <br />
                             <span id="blog_text" class="list_text">我的博客</span>
-                        </a>
-                    </div>
-                </li>
+                        </div>
+                    </li>
+                </a>
             </ul>
         </div>
 
@@ -86,10 +86,9 @@
                     <span id="busuanzi_value_site_pv">0</span>
                     次</span>
             </div>
-            <div id=""
             <!--不算子计数-->
-            <div id="image_info" style="float: right;">图片来自 <a href="/goto?goto=https://bing.com/">Bing</a> 每日图片 / api 来自 <a
-                    href="/goto?goto=https://www.dujin.org/3618.html">缙哥哥博客</a></div>
+            <div id="image_info" style="float: right;">图片来自 <a href="/goto?goto=https://bing.com/">Bing</a> 每日图片 / api
+                来自 <a href="/goto?goto=https://www.dujin.org/3618.html">缙哥哥博客</a></div>
         </footer>
 
     </div>
