--- a/happy-mothers-day/index.html
+++ b/happy-mothers-day/index.html
@@ -19,11 +19,11 @@
             </div>
             <div id="words">
                 <div id="wordBox" class="middleWords">
-                    <p>亲爱的妈妈：</p>
-                    <p>
-                        祝您母亲节快乐！希望您天天心心，万事如意，永远十八岁！我爱您妈妈！
+                    <p id="wordTo">亲爱的妈妈：</p>
+                    <p id="wordContent">
+                        祝您母亲节快乐！希望您天天心心，万事如意，永远十八岁！我爱您，妈妈！
                     </p>
-                    <p>
+                    <p id="wordBy">
                         ——您的儿子郝喻杰
                     </p>
                 </div>
