--- a/happy-mothers-day/index.html
+++ b/happy-mothers-day/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-CN">
 
 <head>
@@ -20,10 +20,8 @@
             <div id="words">
                 <div id="wordBox" class="middleWords">
                     <p>亲爱的妈妈：</p>
-                    <p>
-                        祝您母亲节快乐！希望您天天心心，万事如意，永远十八岁！我爱您妈妈！
-                    </p>
-                    <p>
+                    <pre style="overflow: auto; font-family: Arial, Helvetica, sans-serif   ;"><p>	这是您的第十二个母亲节，您辛苦了，祝您节日快乐，永远十八岁！我爱您，妈妈！这是我亲手制作的网页，希望您能喜欢。</p></pre>
+                    <p style="text-align: right;">
                         ——您的儿子郝喻杰
                     </p>
                 </div>
