--- a/blogs/index.html
+++ b/blogs/index.html
@@ -1,12 +1,27 @@
----
-layout: blog
-title: "EarthMessenger 的博客"
----
+<!DOCTYPE html>
+<html lang="zh-CN">
 
-<ul>
-    {% for post in site.posts %}
-    <li>
-        <a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
-    {% endfor %}
-</ul>
+<head>
+    <meta charset="UTF-8">
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/assets/style/blogmenu.css" type="text/css" />
+    <link rel="stylesheet" href="/assets/style/nav.css" type="text/css" />
+    <title>Earth_Messenger的博客目录</title>
+</head>
+
+<body>
+    <div id="root">
+        <header>
+            {% include header.html %}
+        </header>
+        <ul>
+            {% for post in site.posts %}
+            <li>
+                <a href="{{ post.url }}">{{ post.title }}</a>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
+</body>
+
+</html>
